
[package]
name = "wybe_token_program"
version = "0.1.0"
description = "Wybe Finance Token Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wybe_token_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.0"
